--- a/style.css
+++ b/style.css
@@ -142,6 +142,12 @@
     #sell-section{
         flex-direction: column-reverse;
     }
+    #sell-text p{
+        text-align: left;
+    }
+    #sell-text h1{
+        text-align: left;
+    }
 }
 
 /* footer-section */
